# bazel-elm-spa-example

./: BUILD.bazel  README.md  WORKSPACE  index.html
src/: BUILD.bazel
tests/: BUILD.bazel
